# flower-trading-system-solo

./: .gitignore  CMakeLists.txt  README.md
cmake/: FlowerTradingSources.cmake
data/: execution.csv  orders.csv
include/Core/: CSVRecord.hpp  ExecutionReport.hpp  Order.hpp  OrderReject.hpp  OrderValidator.hpp  RawOrder.hpp  Types.hpp
include/Engine/: Exchange.hpp  OrderBook.hpp  OrderBookSide.hpp
include/IO/: CsvReader.hpp  CsvWriter.hpp  OrderProcessor.hpp
include/Utils/: FixedString.hpp  OrderIdGenerator.hpp  StringUtils.hpp  TimeUtils.hpp
src/: main.cpp
src/Core/: OrderValidator.cpp
src/Engine/: OrderBook.cpp
src/IO/: CSVWriter.cpp  CsvReader.cpp  CsvWriter.cpp  OrderProcessor.cpp
src/Utils/: OrderIdGenerator.cpp  TimeUtils.cpp
tests/: run_csv_scenarios.ps1
tests/cases/expected/: example1.csv  example2.csv  example3.csv  example4.csv  example5.csv  example6.csv  example7.csv  example8.csv
tests/cases/input/: example1.csv  example2.csv  example3.csv  example4.csv  example5.csv  example6.csv  example7.csv  example8.csv
tests/unit/: test_exchange.cpp  test_fixed_string.cpp  test_helpers.hpp  test_order_book.cpp  test_order_book_side.cpp  test_order_processor.cpp  test_order_validator.cpp
traderApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
